Restored original build.gradle file